--- a/TryHttpBenchMark/BenchMark/BenchMark.csproj
+++ b/TryHttpBenchMark/BenchMark/BenchMark.csproj
@@ -222,6 +222,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebApiClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
