--- a/StudyWebClient/SimpleWebApiClient/SimpleWebApiClient/SimpleWebApiClient.csproj
+++ b/StudyWebClient/SimpleWebApiClient/SimpleWebApiClient/SimpleWebApiClient.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>7.3</LangVersion>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
